--- a/saybabook_app/static/saybabook_app/css/landingpage.css
+++ b/saybabook_app/static/saybabook_app/css/landingpage.css
@@ -1,6 +1,6 @@
 /* Body Style Design */
 body {
-  background-color: #6C6C6C;
+  background-color: #6c6c6c;
 }
 /* Navbar Style Design */
 .navbar {
@@ -21,42 +21,80 @@ body {
   font-weight: 1000;
   font-family: "IstokWeb", sans-serif;
 }
-.d-flex .btn:hover{
+.d-flex .btn:hover {
   background-color: #474747;
   color: #ffffff;
   margin-right: 10px;
   font-weight: 1000;
   font-family: "IstokWeb", sans-serif;
 }
+/* Modal Design */
+#btn-register{
+  color: #36e780; 
+  font-weight: bold;
+}
+#btn-register:hover{
+  background-color: #1f8b4c;
+  color: #ffffff;
+  font-weight: bold;
+}
+.btn-register-container{
+  border-bottom: 3px solid #56d88c;
+  border-radius: 10px;
+}
+.btn-register-container:hover{
+  border-bottom: 3px solid #22e971;
+  border-radius: 10px;
+}
+#login-btn {
+  color: #36e780;
+  font-weight: bold;
+}
+#login-btn:hover {
+  background-color: #56d88c;
+  color: #ffffff;
+  font-weight: bold;
+}
+.login-btn-container {
+  border-bottom: 3px solid #56d88c;
+  border-radius: 10px;
+}
+.login-btn-container:hover {
+  border-bottom: 3px solid #398a5a;
+  border-radius: 10px;
+}
 /* First Section Style*/
-#brand-name-container{
-text-align: center;
+#brand-name-container {
+  text-align: center;
 }
-.brand-name{
-font-weight: 900;
-color: #ffffff;
-font-size: 75px;
-font-family: "IstokWeb", sans-serif;
+.brand-name {
+  font-weight: 900;
+  color: #ffffff;
+  font-size: 75px;
+  font-family: "IstokWeb", sans-serif;
 }
-#brand-description-container{
-text-align: center;
-width: 50%;
+#brand-description-container {
+  text-align: center;
+  width: 50%;
 }
-.brand-description{
-color: #ffffff;
-font-family: "IstokWeb", sans-serif;
+.brand-description {
+  color: #ffffff;
+  font-family: "IstokWeb", sans-serif;
 }
-#brand-arrowdown-container{
-text-align: center;
-width: 50%;
+#brand-arrowdown-container {
+  text-align: center;
+  width: 50%;
 }
-.brand-arrowdown{
-width: 60px;
-height:60px;
+.brand-arrowdown {
+  width: 60px;
+  height: 60px;
 }
 /* Seconds Section Style*/
-#features-container{
-    text-align: center;
+.feat-description{
+  color: #ffffff;
+}
+#features-container {
+  text-align: center;
 }
 /* Custom Font*/
 @font-face {
