Browse, MyBooks & Archive Section design done

--- a/saybabook_app/templates/saybabook_app/browse.html
+++ b/saybabook_app/templates/saybabook_app/browse.html
@@ -4,9 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="{% static 'saybabook_app/img/favicon.png' %}">
     <link
       rel="stylesheet"
       href="{% static 'saybabook_app/vendor/bootstrap-5.3.8-dist/css/bootstrap.min.css' %}"
+    />
+     <link
+      rel="stylesheet"
+      href="{% static 'saybabook_app/css/browsepage.css' %}"
     />
     <title>Browse</title>
   </head>
