--- a/saybabook_app/templates/saybabook_app/account.html
+++ b/saybabook_app/templates/saybabook_app/account.html
@@ -9,20 +9,68 @@
       href="{% static 'saybabook_app/vendor/bootstrap-5.3.8-dist/css/bootstrap.min.css' %}"
     />
     <title>Account</title>
+           <link
+      rel="stylesheet"
+      href="{% static 'saybabook_app/css/account.css' %}"
+    />
   </head>
   <body>
     {% include 'saybabook_app/components/navbar.html' %}
-    <div class="container">
+    <div class="container my-5" id="card-container">
+  <div class="row justify-content-center">
+    <div class="col-md-8 shadow p-4 rounded bg-white">
       <form method="post" enctype="multipart/form-data" action="{% url 'account.edit' %}">
         {% csrf_token %}
 
-        <h3>Account Settings</h3>
-    {{ user_form.as_p }}
-        <h3>Profile Form Test</h3>
-        {{ profile_form.as_p }}
+        <h3 class="mb-4">Account Settings</h3>
+        <div class="row">
+          {% for field in user_form %}
+            <div class="col-md-6 mb-3">
+              <label class="form-label fw-bold">{{ field.label }}</label>
+              {{ field }}
+              {% if field.errors %}<div class="text-danger small">{{ field.errors }}</div>{% endif %}
+            </div>
+          {% endfor %}
+        </div>
 
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <hr class="my-4">
+
+        <h3 class="mb-4">Profile Details</h3>
+        <div class="row align-items-center">
+          <div class="col-md-4 text-center mb-3">
+            <div class="mb-2">
+              <label class="form-label d-block text-muted">Current/New Cover</label>
+              <img id="image-placeholder" 
+                   src="{% if profile_form.instance.book_cover %}{{ profile_form.instance.book_cover.url }}{% else %}https://placehold.co/150x200?text=Upload+Cover{% endif %}" 
+                   class="img-thumbnail" 
+                   style="width: 150px; height: 200px; object-fit: cover;" 
+                   alt="Preview">
+            </div>
+          </div>
+
+          <div class="col-md-8">
+            {% for field in profile_form %}
+              <div class="mb-3">
+                <label class="form-label fw-bold">{{ field.label }}</label>
+                {% if field.name == 'book_cover' %}
+                   {{ field }} {% else %}
+                   {{ field }}
+                {% endif %}
+                {% if field.errors %}<div class="text-danger small">{{ field.errors }}</div>{% endif %}
+              </div>
+            {% endfor %}
+          </div>
+        </div>
+
+        <div class="mt-4 border-top pt-3 text-end">
+          <button type="submit" class="btn btn-primary px-5">Save Changes</button>
+        </div>
       </form>
     </div>
+  </div>
+</div>
+<script src="{% static 'saybabook_app/js/imageplaceholder.js' %}">
+
+</script>
   </body>
 </html>
