project done, comeback later for refactor and debugging

--- a/saybabook_app/static/saybabook_app/css/landingpage.css
+++ b/saybabook_app/static/saybabook_app/css/landingpage.css
@@ -107,6 +107,12 @@ body {
 .contact-section{
     background-color:#b9b7b7 ;
 }
+#contact-info-container{
+  text-align: center;
+}
+.footer-info{
+  text-align: center;
+}
 /* Custom Font*/
 @font-face {
   font-family: "IstokWeb";
