--- a/saybabook_app/templates/saybabook_app/landingpage.html
+++ b/saybabook_app/templates/saybabook_app/landingpage.html
@@ -134,24 +134,28 @@
 </div>
 <div class="row" id="features-container">
     <div class="col-6">
-    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/bookicon.png' %}" alt="">
-        <span class="feat-description">Book Icon</span>
+        <img class="brand-arrowdown" src="{% static 'saybabook_app/img/bookicon.png' %}" alt="">
+        <span class="feat-description">Keep all your book links perfectly organized.</span>
     </div>
+
     <div class="col-6">
-    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/linkicon.png' %}" alt="">
-        <span class="feat-description">Link Icon</span>
+        <img class="brand-arrowdown" src="{% static 'saybabook_app/img/linkicon.png' %}" alt="">
+        <span class="feat-description">Connect directly to your favorite online books.</span>
     </div>
+
     <div class="container">
-    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/foldericon.png' %}" alt="">
-    <span class="feat-description">Folder Icon</span>
+        <img class="brand-arrowdown" src="{% static 'saybabook_app/img/foldericon.png' %}" alt="">
+        <span class="feat-description">Enjoy easy and fast book additions to your library.</span>
     </div>
-       <div class="col-6">
-    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/usericon.png' %}" alt="">
-        <span class="feat-description">Human Icon</span>
-    </div>
+
     <div class="col-6">
-    <img class="brand-arrowdown" src="{% static 'saybabook_app/img/thundericon.png' %}" alt="">
-        <span class="feat-description">Thunder Icon</span>
+        <img class="brand-arrowdown" src="{% static 'saybabook_app/img/usericon.png' %}" alt="">
+        <span class="feat-description">Personalize your experience with user customizations.</span>
+    </div>
+
+    <div class="col-6">
+        <img class="brand-arrowdown" src="{% static 'saybabook_app/img/thundericon.png' %}" alt="">
+        <span class="feat-description">Experience blazing fast speed for everything you do.</span>
     </div>
 </div>
 </section>
@@ -160,10 +164,23 @@
     <br>
     <span class="brand-name"> Contact</span>
 </div>
+
 <div class="container" id="brand-arrowdown-container">
     <br>
     <img class="brand-arrowdown" src="{% static 'saybabook_app/img/arrowdown.png' %}" alt="">
 </div>
+<div class="mb-4" id="contact-info-container">
+            <p class="lead mb-1">Have questions? Reach out to us at:</p>
+            <a href="mailto:saybabook@gmail.com" class="text-primary fw-bold text-decoration-none fs-5">
+                saybabook@gmail.com
+            </a>
+        </div>
+
+        <hr class="w-25 mx-auto my-4">
+
+        <div class="footer-info text-muted">
+            <p class="mb-0">&copy; 2025 Saybabook. All rights reserved.</p>
+        </div>
 </section>
 <!-- Nav Modal Register Ends Here -->
       {% include 'saybabook_app/components/scripts.html' %}
