--- a/saybabook_app/templates/saybabook_app/landingpage.html
+++ b/saybabook_app/templates/saybabook_app/landingpage.html
@@ -120,7 +120,7 @@
 </div>
 <div class="container" id="brand-description-container">
     <br>
-    <p class="brand-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+    <p class="brand-description">In an age where our next great read can appear anywhere from a social media recommendation to an obscure online archive keeping track of it all can be a challenge. My platform bridges the gap between discovery and organization. By simply pasting a URL, our tool intelligently transforms a basic web link into a rich, visual entry in your personal digital library. </p>
 </div>
 </section>
 <section class="feature-section">
